Add link to TAR+GZIP sample.

--- a/Concepts/GZIP.ipynb
+++ b/Concepts/GZIP.ipynb
@@ -102,6 +102,13 @@
     "File.Delete(sourcePath);\n",
     "File.Delete(targetPath);"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> Sample for TAR + GZIP in C# can be found in [this gist](https://gist.github.com/ridercz/a728843c4409e7d1534d10b145de751e). I cannot include it in notebook, because it requires newer version of .NET than is available in .NET Interactive."
+   ]
   }
  ],
  "metadata": {
